--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   freezed: ^2.3.2
   get: ^4.6.5
   get_storage: ^2.1.1
+  heroicons: ^0.10.0
   intl: ^0.18.0
   json_annotation: ^4.8.0
   json_serializable: ^6.6.1
