--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   _fe_analyzer_shared: ^55.0.0
   android_path_provider: ^0.3.0
+  audioplayers: ^6.0.0
   cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
@@ -29,6 +30,7 @@ dependencies:
   logger: ^1.2.2
   modal_bottom_sheet: ^3.0.0-pre
   permission_handler: ^10.2.0
+  pocketbase: ^0.18.1
   pull_to_refresh: ^2.0.0
   retrofit: any
   retrofit_generator: any
