feat: info detail

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_localization: ^0.1.12
   flutter_native_splash: ^2.2.19
   flutter_secure_storage: ^8.0.0
+  flutter_widget_from_html: ^0.15.1
   form_builder_validators: ^9.0.0
   freezed: ^2.3.2
   get: ^4.6.5
@@ -34,6 +35,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   retrofit: any
   retrofit_generator: any
+  scrollable_positioned_list: ^0.3.8
   shimmer: ^2.0.0
   sizer: ^2.0.15
 
