--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   android_path_provider: ^0.3.0
   audioplayers: ^6.0.0
   cached_network_image: ^3.2.3
+  change_app_package_name: ^1.2.0
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
   equatable: ^2.0.5
@@ -17,7 +18,6 @@ dependencies:
     sdk: flutter
   flutter_form_builder: ^9.0.0
   flutter_localization: ^0.1.12
-  flutter_native_splash: ^2.2.19
   flutter_secure_storage: ^8.0.0
   flutter_widget_from_html: ^0.15.1
   form_builder_validators: ^9.0.0
